# MySort

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Sorts.sln  Tutor_ch.docx
Sorts/: DataConfig.hpp  Sorts.vcxproj  Sorts.vcxproj.filters  data.txt  main.cpp
Sorts/Sort/: BubbleSort.hpp  InsertionSort.hpp  MergeSort.hpp  MySort.h  PreDefined.hpp  QuickSort.hpp  SelectionSort.hpp  Utilities.hpp
Sorts/Tests/: BaseTestPattern.hpp  Params.hpp  TestPatterns.hpp
Sorts/TestsPatterns/: BaseTestPattern.hpp  BaseTestPatterns.cpp  TestPatterns.hpp
Sorts/Tools/: Random.hpp  TimeCounter.hpp
Sorts/src/: TestPatterns.cpp  TestPatterns.hpp  main.cpp
docs/: Config_Test_Pattern.md  Env_Setup_Guide_for_Linux.md  Env_Setup_Guide_for_Windows.md
include/MySort/: CompareCounter.hpp
include/MySort/Core/: BubbleSort.hpp  Concept.hpp  HeapSort.hpp  InsertionSort.hpp  MergeSort.hpp  PdqSort.hpp  PreDefined.hpp  QuickSort.hpp  SelectionSort.hpp  StdSorts.hpp  Utilities.hpp
include/MySort/TestPattern/: BaseTestPattern.hpp  DataConfig.hpp  ExampleStruct.hpp  TestPatterns.hpp  VecGenerator.hpp
scripts/: build-libs.ps1  build-libs.sh  build.ps1  build.sh  set-env-vars-windows.ps1
src/: main.cpp
src/Core/: PreDefined.cpp
src/TestPattern/: BaseTestPatterns.cpp  ExampleStruct.cpp
